Launchpad automatic translations update.

--- a/po/stellarium-skycultures/cs.po
+++ b/po/stellarium-skycultures/cs.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2013-01-26 11:30+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-02-04 21:38+0000\n"
+"Last-Translator: Zbyněk Schwarz <Unknown>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-27 04:35+0000\n"
-"X-Generator: Launchpad (build 16451)\n"
+"X-Launchpad-Export-Date: 2013-02-05 04:43+0000\n"
+"X-Generator: Launchpad (build 16468)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -563,7 +563,7 @@ msgstr "Keenanův systém"
 
 #: nebulae/default/ngc2000names.dat:275
 msgid "Kidney Bean galaxy"
-msgstr ""
+msgstr "Fazolová galaxie"
 
 #: nebulae/default/ngc2000names.dat:276 nebulae/default/ngc2000names.dat:277
 #: nebulae/default/ngc2000names.dat:278
@@ -572,7 +572,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:279
 msgid "McLeish's Object"
-msgstr ""
+msgstr "Mcleishův objekt"
 
 #: nebulae/default/ngc2000names.dat:280
 msgid "Miniature Spiral"
@@ -580,19 +580,19 @@ msgstr "Spirálka"
 
 #: nebulae/default/ngc2000names.dat:281
 msgid "Mirach's Ghost"
-msgstr ""
+msgstr "Mirachův duch"
 
 #: nebulae/default/ngc2000names.dat:282
 msgid "Sailboat cluster"
-msgstr ""
+msgstr "Hvězdokupa plachetnice"
 
 #: nebulae/default/ngc2000names.dat:283
 msgid "Seyfert's Sextet"
-msgstr ""
+msgstr "Seyfertův sextet"
 
 #: nebulae/default/ngc2000names.dat:284
 msgid "Soul nebula"
-msgstr ""
+msgstr "Mlhovina duše"
 
 #: nebulae/default/ngc2000names.dat:285
 msgid "Southern Integral Sign"
@@ -600,7 +600,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:286
 msgid "Starfish cluster"
-msgstr ""
+msgstr "Hvězdokupa hvězdice"
 
 #: nebulae/default/ngc2000names.dat:287
 msgid "Superwind-Galaxy"
