--- a/po/stellarium-skycultures/th.po
+++ b/po/stellarium-skycultures/th.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: Thai for stellarium 0.8.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2012-12-30 11:23+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-02-04 10:50+0000\n"
+"Last-Translator: Worachate Boonplod <Unknown>\n"
 "Language-Team: MicKi Alone <Need24Get@msn.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-09 04:59+0000\n"
-"X-Generator: Launchpad (build 16412)\n"
+"X-Launchpad-Export-Date: 2013-02-05 04:43+0000\n"
+"X-Generator: Launchpad (build 16468)\n"
 "X-Poedit-Country: THAILAND\n"
 "X-Poedit-Language: Thai\n"
 
@@ -33,7 +33,7 @@ msgstr "ดาราจักรของบาร์นาร์ด"
 
 #: nebulae/default/ngc2000names.dat:116
 msgid "Bear's Paw galaxy"
-msgstr ""
+msgstr "ดาราจักรอุ้งตีนหมี"
 
 #: nebulae/default/ngc2000names.dat:117
 msgid "Beehive cluster"
@@ -61,7 +61,7 @@ msgstr "เนบิวลาของโบเดอ"
 
 #: nebulae/default/ngc2000names.dat:123
 msgid "Cigar Galaxy"
-msgstr ""
+msgstr "ดาราจักรซิการ์"
 
 #: nebulae/default/ngc2000names.dat:124 nebulae/default/ngc2000names.dat:125
 #: nebulae/default/ngc2000names.dat:126 nebulae/default/ngc2000names.dat:127
@@ -94,7 +94,7 @@ msgstr "เนบิวลาแคลิฟอร์เนีย"
 
 #: nebulae/default/ngc2000names.dat:134
 msgid "Centaurus A"
-msgstr ""
+msgstr "คนครึ่งม้าเอ"
 
 #: nebulae/default/ngc2000names.dat:135
 msgid "Christmas Tree cluster"
@@ -165,7 +165,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:159
 msgid "Andromeda Galaxy"
-msgstr ""
+msgstr "ดาราจักรแอนดรอเมดา"
 
 #: nebulae/default/ngc2000names.dat:160
 msgid "Great Nebula in Orion"
@@ -372,7 +372,7 @@ msgstr "เนบิวลาแลมบ์ดาคนครึ่งม้า
 
 #: nebulae/default/ngc2000names.dat:223
 msgid "ω Cen cluster"
-msgstr ""
+msgstr "กระจุกดาวโอเมกาคนครึ่งม้า"
 
 #: nebulae/default/ngc2000names.dat:224
 msgid "ρ Oph nebula"
@@ -384,11 +384,11 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:226
 msgid "Cat's Paw nebula"
-msgstr ""
+msgstr "เนบิวลาอุ้งตีนแมว"
 
 #: nebulae/default/ngc2000names.dat:227
 msgid "War and Peace nebula"
-msgstr ""
+msgstr "เนบิวลาสงครามและสันติภาพ"
 
 #: nebulae/default/ngc2000names.dat:228
 msgid "Little Ghost nebula"
@@ -400,15 +400,15 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:230
 msgid "Perseus A"
-msgstr ""
+msgstr "เพอร์ซิอัสเอ"
 
 #: nebulae/default/ngc2000names.dat:231
 msgid "Fornax A"
-msgstr ""
+msgstr "เตาหลอมเอ"
 
 #: nebulae/default/ngc2000names.dat:232
 msgid "Fornax B"
-msgstr ""
+msgstr "เตาหลอมบี"
 
 #: nebulae/default/ngc2000names.dat:233
 msgid "de Mairan's nebula"
@@ -432,11 +432,11 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:238
 msgid "τ Canis Majoris cluster"
-msgstr ""
+msgstr "กระจุกดาวเทาหมาใหญ่"
 
 #: nebulae/default/ngc2000names.dat:239
 msgid "Pencil nebula"
-msgstr ""
+msgstr "เนบิวลาดินสอ"
 
 #: nebulae/default/ngc2000names.dat:240
 msgid "Supernova Factory"
@@ -464,7 +464,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:246
 msgid "Monkey Head nebula"
-msgstr ""
+msgstr "เนบิวลาหัวลิง"
 
 #: nebulae/default/ngc2000names.dat:247
 msgid "Lemon slice nebula"
@@ -472,7 +472,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:248
 msgid "Red spider nebula"
-msgstr ""
+msgstr "เนบิวลาแมงมุมแดง"
 
 #: nebulae/default/ngc2000names.dat:249
 msgid "Retina nebula"
@@ -488,7 +488,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:252
 msgid "20 Vulpeculae cluster"
-msgstr ""
+msgstr "กระจุกดาว 20 หมาจิ้งจอก"
 
 #: nebulae/default/ngc2000names.dat:253
 msgid "Ambartsumian's Knot"
@@ -504,7 +504,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:256
 msgid "Cetus A"
-msgstr ""
+msgstr "ซีตัสเอ"
 
 #: nebulae/default/ngc2000names.dat:257
 msgid "Cleopatra's Eye"
@@ -520,19 +520,19 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:260
 msgid "Sagittarius Star Cloud"
-msgstr ""
+msgstr "เมฆดาวคนยิงธนู"
 
 #: nebulae/default/ngc2000names.dat:261
 msgid "Dragon nebula"
-msgstr ""
+msgstr "เนบิวลามังกร"
 
 #: nebulae/default/ngc2000names.dat:262
 msgid "Dragonfly cluster"
-msgstr ""
+msgstr "กระจุกดาวแมลงปอ"
 
 #: nebulae/default/ngc2000names.dat:263
 msgid "Elephant Trunk"
-msgstr ""
+msgstr "งวงช้าง"
 
 #: nebulae/default/ngc2000names.dat:264 nebulae/default/ngc2000names.dat:265
 #: nebulae/default/ngc2000names.dat:266 nebulae/default/ngc2000names.dat:267
@@ -541,11 +541,11 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:268
 msgid "Heart nebula"
-msgstr ""
+msgstr "เนบิวลาหัวใจ"
 
 #: nebulae/default/ngc2000names.dat:269
 msgid "Heart-Shaped cluster"
-msgstr ""
+msgstr "กระจุกดาวรูปหัวใจ"
 
 #: nebulae/default/ngc2000names.dat:270
 msgid "Herring galaxy"
@@ -602,7 +602,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:286
 msgid "Starfish cluster"
-msgstr ""
+msgstr "กระจุกดาวปลาดาว"
 
 #: nebulae/default/ngc2000names.dat:287
 msgid "Superwind-Galaxy"
