Launchpad automatic translations update.

--- a/po/stellarium-skycultures/vi.po
+++ b/po/stellarium-skycultures/vi.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2013-01-27 11:54+0000\n"
+"PO-Revision-Date: 2013-02-06 15:48+0000\n"
 "Last-Translator: thanbang <thanbang00@gmail.com>\n"
 "Language-Team: Vietnamese <vi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-28 05:12+0000\n"
-"X-Generator: Launchpad (build 16451)\n"
+"X-Launchpad-Export-Date: 2013-02-07 04:42+0000\n"
+"X-Generator: Launchpad (build 16477)\n"
 
 #: skycultures/western/star_names.fab:20
 msgid "Polaris"
@@ -1852,7 +1852,7 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:33
 msgid "Soldiers Market"
-msgstr ""
+msgstr "Quân Thị"
 
 #: skycultures/chinese/constellation_names.eng.fab:34
 msgid "Square Granary"
@@ -1884,11 +1884,11 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:41
 msgid "Orchard"
-msgstr ""
+msgstr "Thiên Viên"
 
 #: skycultures/chinese/constellation_names.eng.fab:42
 msgid "Meadows"
-msgstr ""
+msgstr "Thiên Uyển"
 
 #: skycultures/chinese/constellation_names.eng.fab:43
 msgid "Circular Granary"
@@ -1935,7 +1935,7 @@ msgstr ""
 #: skycultures/chinese/constellation_names.eng.fab:53
 #: skycultures/korean/constellation_names.eng.fab:47
 msgid "Dog"
-msgstr ""
+msgstr "Thiên Cẩu"
 
 #: skycultures/chinese/constellation_names.eng.fab:54
 msgid "Earth God's Temple "
@@ -1943,7 +1943,7 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:55
 msgid "Bow and Arrow "
-msgstr ""
+msgstr "Hồ & Tiễn "
 
 #: skycultures/chinese/constellation_names.eng.fab:56
 msgid "Pestle"
