--- a/po/stellarium-skycultures/ja.po
+++ b/po/stellarium-skycultures/ja.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2012-12-30 11:47+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-02-06 13:48+0000\n"
+"Last-Translator: Shushi Kurose <md81bird@hitaki.net>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-09 04:55+0000\n"
-"X-Generator: Launchpad (build 16412)\n"
+"X-Launchpad-Export-Date: 2013-02-07 04:42+0000\n"
+"X-Generator: Launchpad (build 16477)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -47,7 +47,7 @@ msgstr "まばたき星雲"
 
 #: nebulae/default/ngc2000names.dat:120
 msgid "Blue Snowball"
-msgstr "青い雪だるま (Blue Snowball)"
+msgstr "青い雪だるま(Blue Snowball)"
 
 #: nebulae/default/ngc2000names.dat:121
 msgid "Blue planetary"
@@ -92,7 +92,7 @@ msgstr "カリフォルニア星雲"
 
 #: nebulae/default/ngc2000names.dat:134
 msgid "Centaurus A"
-msgstr "ケンタウルス座 A (Centaurus A)"
+msgstr "ケンタウルス座 A(Centaurus A)"
 
 #: nebulae/default/ngc2000names.dat:135
 msgid "Christmas Tree cluster"
@@ -111,7 +111,7 @@ msgstr "コーン星雲"
 #: nebulae/default/ngc2000names.dat:142 nebulae/default/ngc2000names.dat:143
 #: nebulae/default/ngc2000names.dat:144
 msgid "Copeland's Septet"
-msgstr "コ－プランドの七つ子"
+msgstr "コープランドの七つ子"
 
 #: nebulae/default/ngc2000names.dat:145
 msgid "Crab nebula"
@@ -155,7 +155,7 @@ msgstr "まが玉星雲"
 
 #: nebulae/default/ngc2000names.dat:157
 msgid "Ghost of Jupiter"
-msgstr "木星状星雲"
+msgstr "木星状星雲(Ghost of Jupiter)"
 
 #: nebulae/default/ngc2000names.dat:158
 msgid "Great Cluster in Hercules"
@@ -163,7 +163,7 @@ msgstr "ヘルクレス座大球状星団"
 
 #: nebulae/default/ngc2000names.dat:159
 msgid "Andromeda Galaxy"
-msgstr "アンドロメダ星雲 (Andromeda Galaxy)"
+msgstr "アンドロメダ星雲"
 
 #: nebulae/default/ngc2000names.dat:160
 msgid "Great Nebula in Orion"
@@ -660,7 +660,7 @@ msgstr ""
 
 #: skycultures/arabic/constellation_names.eng.fab:13
 msgid "Centaur"
-msgstr ""
+msgstr "ケンタウルス座"
 
 #: skycultures/arabic/constellation_names.eng.fab:14
 msgid "Inflammatus"
@@ -4447,7 +4447,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:34
 msgid "Merope"
-msgstr ""
+msgstr "メローペ(Merope)"
 
 #: skycultures/western/star_names.fab:35
 msgid "Alcyone"
@@ -4547,7 +4547,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:59
 msgid "Betelgeuse"
-msgstr ""
+msgstr "ベテルギウス"
 
 #: skycultures/western/star_names.fab:60
 msgid "Menkalinan"
@@ -4571,7 +4571,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:66
 msgid "Canopus"
-msgstr ""
+msgstr "カノープス"
 
 #: skycultures/western/star_names.fab:67
 msgid "Alhena"
@@ -4583,7 +4583,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:69
 msgid "Sirius"
-msgstr ""
+msgstr "シリウス"
 
 #: skycultures/western/star_names.fab:70
 msgid "Adhara"
@@ -4627,11 +4627,11 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:80
 msgid "Procyon"
-msgstr ""
+msgstr "プロキオン"
 
 #: skycultures/western/star_names.fab:81
 msgid "Pollux"
-msgstr ""
+msgstr "ポルックス"
 
 #: skycultures/western/star_names.fab:82
 msgid "Naos"
@@ -4699,7 +4699,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:98
 msgid "Regulus"
-msgstr ""
+msgstr "レグルス"
 
 #: skycultures/western/star_names.fab:99
 msgid "Adhafera"
@@ -4751,7 +4751,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:111
 msgid "Denebola"
-msgstr ""
+msgstr "デネボラ"
 
 #: skycultures/western/star_names.fab:112
 msgid "Zavijava"
@@ -4808,7 +4808,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:125
 msgid "Cor Caroli"
-msgstr ""
+msgstr "コルカロリ"
 
 #: skycultures/western/star_names.fab:126
 msgid "Vindemiatrix"
@@ -4816,11 +4816,11 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:127
 msgid "Mizar"
-msgstr ""
+msgstr "ミザール"
 
 #: skycultures/western/star_names.fab:128
 msgid "Spica"
-msgstr ""
+msgstr "スピカ"
 
 #: skycultures/western/star_names.fab:129
 msgid "Alcor"
@@ -4844,7 +4844,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:135
 msgid "Arcturus"
-msgstr ""
+msgstr "アルクトゥルス"
 
 #: skycultures/western/star_names.fab:136
 msgid "Syrma"
@@ -4940,7 +4940,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:159
 msgid "Antares"
-msgstr ""
+msgstr "アンタレス"
 
 #: skycultures/western/star_names.fab:160
 msgid "Kornephoros"
@@ -5008,7 +5008,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:176
 msgid "Barnard's Star"
-msgstr ""
+msgstr "バーナード星"
 
 #: skycultures/western/star_names.fab:177
 msgid "Alnasl"
@@ -5028,7 +5028,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:181
 msgid "Vega"
-msgstr ""
+msgstr "ベガ"
 
 #: skycultures/western/star_names.fab:182
 msgid "Sheliak"
@@ -5064,7 +5064,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:190
 msgid "Albireo"
-msgstr ""
+msgstr "アルビレオ"
 
 #: skycultures/western/star_names.fab:191
 msgid "Campbell's Star"
@@ -5080,7 +5080,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:194
 msgid "Altair"
-msgstr ""
+msgstr "アルタイル"
 
 #: skycultures/western/star_names.fab:195
 msgid "Alshain"
@@ -5112,7 +5112,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:202
 msgid "Deneb"
-msgstr ""
+msgstr "デネブ"
 
 #: skycultures/western/star_names.fab:204
 msgid "Albali"
@@ -5180,7 +5180,7 @@ msgstr "サドアクビア"
 
 #: skycultures/western/star_names.fab:220
 msgid "Kruger 60"
-msgstr ""
+msgstr "クルーガー60"
 
 #: skycultures/western/star_names.fab:221
 msgid "Situla"
