--- a/po/stellarium-skycultures/cs.po
+++ b/po/stellarium-skycultures/cs.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2013-02-04 21:38+0000\n"
+"PO-Revision-Date: 2013-02-07 20:55+0000\n"
 "Last-Translator: Zbyněk Schwarz <Unknown>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-02-05 04:43+0000\n"
-"X-Generator: Launchpad (build 16468)\n"
+"X-Launchpad-Export-Date: 2013-02-08 04:34+0000\n"
+"X-Generator: Launchpad (build 16482)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -543,19 +543,19 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:269
 msgid "Heart-Shaped cluster"
-msgstr ""
+msgstr "Srdcová hvězdokupa"
 
 #: nebulae/default/ngc2000names.dat:270
 msgid "Herring galaxy"
-msgstr ""
+msgstr "Galaxie sleďe"
 
 #: nebulae/default/ngc2000names.dat:271
 msgid "Hole in a cluster"
-msgstr ""
+msgstr "Díra vee hvězdokupě"
 
 #: nebulae/default/ngc2000names.dat:272
 msgid "Intergalactic Wanderer/Tramp"
-msgstr ""
+msgstr "Mezigalaktický poutník/tulák"
 
 #: nebulae/default/ngc2000names.dat:273 nebulae/default/ngc2000names.dat:274
 msgid "Keenan's System"
@@ -596,7 +596,7 @@ msgstr "Mlhovina duše"
 
 #: nebulae/default/ngc2000names.dat:285
 msgid "Southern Integral Sign"
-msgstr ""
+msgstr "Jižní znaménko integrálu"
 
 #: nebulae/default/ngc2000names.dat:286
 msgid "Starfish cluster"
