--- a/po/stellarium-skycultures/is.po
+++ b/po/stellarium-skycultures/is.po
@@ -1,24 +1,24 @@
-# translation of 20110805-po_stellarium-skycultures_stellarium-skycultures-is.po to Icelandic
+# translation of 20130131_stellarium-skycultures_stellarium-skycultures-is.po to Icelandic
 # Icelandic translation for stellarium
 # Copyright (c) Íslenskir þýðendur Stellarium 2006-2011
 # This file is distributed under the same license as the stellarium package.
 #
-# Sveinn í Felli <sveinki@nett.is>, 2008, 2009, 2010, 2011.
+# Sveinn í Felli <sveinki@nett.is>, 2008, 2009, 2010, 2011, 2013.
 # Sverrir Guðmundsson <sverrgu@hotmail.com>, 2008, 2009, 2010, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: 20110805-po_stellarium-skycultures_stellarium-"
-"skycultures-is\n"
+"Project-Id-Version: 20130131_stellarium-skycultures_stellarium-skycultures-"
+"is\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2011-11-03 05:42+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
-"Language-Team: Icelandic <is@li.org>\n"
+"PO-Revision-Date: 2013-02-07 13:17+0000\n"
+"Last-Translator: Sveinn í Felli <sveinki@nett.is>\n"
+"Language-Team: Icelandic <translation-team-is@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-09 04:55+0000\n"
-"X-Generator: Launchpad (build 16412)\n"
+"X-Launchpad-Export-Date: 2013-02-08 04:35+0000\n"
+"X-Generator: Launchpad (build 16482)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -62,7 +62,7 @@ msgstr "Þokur Bodes"
 
 #: nebulae/default/ngc2000names.dat:123
 msgid "Cigar Galaxy"
-msgstr ""
+msgstr "Vindilsvetrarbrautin"
 
 #: nebulae/default/ngc2000names.dat:124 nebulae/default/ngc2000names.dat:125
 #: nebulae/default/ngc2000names.dat:126 nebulae/default/ngc2000names.dat:127
@@ -95,7 +95,7 @@ msgstr "Kaliforníuþokan"
 
 #: nebulae/default/ngc2000names.dat:134
 msgid "Centaurus A"
-msgstr ""
+msgstr "Centaurus A"
 
 #: nebulae/default/ngc2000names.dat:135
 msgid "Christmas Tree cluster"
@@ -166,7 +166,7 @@ msgstr "Kúluþyrpingin mikla í Herkúlesi"
 
 #: nebulae/default/ngc2000names.dat:159
 msgid "Andromeda Galaxy"
-msgstr ""
+msgstr "Andrómeda vetrarbrautin"
 
 #: nebulae/default/ngc2000names.dat:160
 msgid "Great Nebula in Orion"
@@ -194,7 +194,7 @@ msgstr "Stundaglasþokan"
 
 #: nebulae/default/ngc2000names.dat:166
 msgid "Hubble's variable nebula"
-msgstr ""
+msgstr "Breytiþoka Hubble"
 
 #: nebulae/default/ngc2000names.dat:167
 msgid "Jewel Box"
@@ -736,7 +736,7 @@ msgstr ""
 
 #: skycultures/arabic/constellation_names.eng.fab:31
 msgid "The Balance"
-msgstr ""
+msgstr "Vogin"
 
 #: skycultures/arabic/constellation_names.eng.fab:32
 msgid "The Turtle"
@@ -1349,7 +1349,7 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:137
 msgid "Arrowhead"
-msgstr ""
+msgstr "Örvaroddur"
 
 #: skycultures/arabic/star_names.fab:138
 msgid "The middle one of the bow"
@@ -1369,7 +1369,7 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:142
 msgid "The harp"
-msgstr ""
+msgstr "Harpan"
 
 #: skycultures/arabic/star_names.fab:143
 msgid "Second outgoing ostriches"
@@ -3716,7 +3716,7 @@ msgstr "Kvenvagninn"
 
 #: skycultures/norse/constellation_names.eng.fab:5
 msgid "Man's Cart"
-msgstr "Karlavagninn"
+msgstr "Karlsvagninn"
 
 #: skycultures/norse/constellation_names.eng.fab:6
 msgid "The Asar Battlefield"
@@ -4126,7 +4126,7 @@ msgstr "Stóribjörn"
 
 #: skycultures/western/constellation_names.eng.fab:41
 msgid "Grus"
-msgstr "Hegrinn"
+msgstr "Tranan"
 
 #: skycultures/western/constellation_names.eng.fab:42
 msgid "Hercules"
