--- a/po/stellarium/cv.po
+++ b/po/stellarium/cv.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-02-02 20:24+0700\n"
-"PO-Revision-Date: 2012-05-09 17:10+0000\n"
+"PO-Revision-Date: 2013-02-08 11:30+0000\n"
 "Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Chuvash <cv@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-02-03 04:37+0000\n"
-"X-Generator: Launchpad (build 16462)\n"
+"X-Launchpad-Export-Date: 2013-02-09 04:34+0000\n"
+"X-Generator: Launchpad (build 16482)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1198
 msgid "Meridian"
@@ -112,7 +112,7 @@ msgstr ""
 
 #: src/core/modules/Nebula.cpp:360
 msgid "Unknown"
-msgstr ""
+msgstr "Паллă мар"
 
 #: src/core/modules/Nebula.cpp:363
 msgid "Undocumented type"
@@ -376,7 +376,7 @@ msgstr ""
 
 #: src/core/SimbadSearcher.cpp:55
 msgid "Network error"
-msgstr ""
+msgstr "Tetel jănăšĕ"
 
 #: src/core/SimbadSearcher.cpp:92 src/core/SimbadSearcher.cpp:104
 msgid "Error parsing position"
@@ -388,7 +388,7 @@ msgstr ""
 
 #: src/core/SimbadSearcher.cpp:132
 msgid "Error"
-msgstr ""
+msgstr "Jănăš"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Not found"
@@ -420,7 +420,7 @@ msgstr ""
 
 #: src/gui/ConfigurationDialog.cpp:684 src/gui/ViewDialog.cpp:425
 msgid "Contact"
-msgstr ""
+msgstr "Şyhănu"
 
 #: src/gui/ConfigurationDialog.cpp:767
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:108
