--- a/po/stellarium/kg.po
+++ b/po/stellarium/kg.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-02-02 20:24+0700\n"
-"PO-Revision-Date: 2012-05-08 17:18+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-02-08 11:49+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Kongo <kg@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-02-03 04:41+0000\n"
-"X-Generator: Launchpad (build 16462)\n"
+"X-Launchpad-Export-Date: 2013-02-09 04:34+0000\n"
+"X-Generator: Launchpad (build 16482)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1198
 msgid "Meridian"
@@ -112,7 +112,7 @@ msgstr ""
 
 #: src/core/modules/Nebula.cpp:360
 msgid "Unknown"
-msgstr ""
+msgstr "dianzenza"
 
 #: src/core/modules/Nebula.cpp:363
 msgid "Undocumented type"
@@ -388,7 +388,7 @@ msgstr ""
 
 #: src/core/SimbadSearcher.cpp:132
 msgid "Error"
-msgstr ""
+msgstr "mpitakani"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Not found"
@@ -433,7 +433,7 @@ msgstr ""
 
 #: src/gui/ConfigurationDialog.cpp:771
 msgid "License"
-msgstr ""
+msgstr "luwawanu"
 
 #: src/gui/ConfigurationDialog.cpp:795
 msgid "Running script: "
