--- a/po/stellarium/be.po
+++ b/po/stellarium/be.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-09 19:56+0700\n"
-"PO-Revision-Date: 2013-02-03 10:52+0000\n"
+"PO-Revision-Date: 2013-02-10 17:24+0000\n"
 "Last-Translator: 375gnu <Unknown>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-02-10 04:36+0000\n"
+"X-Launchpad-Export-Date: 2013-02-11 05:10+0000\n"
 "X-Generator: Launchpad (build 16482)\n"
 "Language: be\n"
 "X-Poedit-SourceCharset: utf-8\n"
@@ -2997,7 +2997,7 @@ msgstr "Павернуць тэлескоп на зададзеныя каард
 
 #: src/translations.h:654
 msgid "Show renderer statistics"
-msgstr ""
+msgstr "Паказваць статыстыку будаўніка"
 
 #. TRANSLATORS: Keyboard action group name
 #: src/translations.h:657 src/ui_configurationDialog.h:1121
