--- a/po/stellarium/de.po
+++ b/po/stellarium/de.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-09 19:56+0700\n"
-"PO-Revision-Date: 2013-02-02 02:33+0000\n"
-"Last-Translator: Dennis Baudys <Unknown>\n"
+"PO-Revision-Date: 2013-02-10 23:48+0000\n"
+"Last-Translator: gzotti <Georg.Zotti@univie.ac.at>\n"
 "Language-Team: <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-02-10 04:39+0000\n"
+"X-Launchpad-Export-Date: 2013-02-11 05:10+0000\n"
 "X-Generator: Launchpad (build 16482)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1198
@@ -3005,7 +3005,7 @@ msgstr "Bewege ein Teleskop zu angegebenen Koordinaten"
 
 #: src/translations.h:654
 msgid "Show renderer statistics"
-msgstr ""
+msgstr "Zeige Statistik zur Graphikdarstellung"
 
 #. TRANSLATORS: Keyboard action group name
 #: src/translations.h:657 src/ui_configurationDialog.h:1121
