--- a/po/stellarium/ru.po
+++ b/po/stellarium/ru.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-09 19:56+0700\n"
-"PO-Revision-Date: 2013-02-05 12:18+0000\n"
+"PO-Revision-Date: 2013-02-10 14:32+0000\n"
 "Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-02-10 04:43+0000\n"
+"X-Launchpad-Export-Date: 2013-02-11 05:10+0000\n"
 "X-Generator: Launchpad (build 16482)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1198
@@ -2991,7 +2991,7 @@ msgstr "Навести телескоп по указанным координа
 
 #: src/translations.h:654
 msgid "Show renderer statistics"
-msgstr ""
+msgstr "Показать статистику визуализации"
 
 #. TRANSLATORS: Keyboard action group name
 #: src/translations.h:657 src/ui_configurationDialog.h:1121
