--- a/po/stellarium-skycultures/zh_CN.po
+++ b/po/stellarium-skycultures/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2013-01-06 15:01+0000\n"
+"PO-Revision-Date: 2013-02-11 10:10+0000\n"
 "Last-Translator: 罗佳伟 <luojiaweil@gmail.com>\n"
 "Language-Team: Chinese (China) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-09 05:00+0000\n"
-"X-Generator: Launchpad (build 16412)\n"
+"X-Launchpad-Export-Date: 2013-02-12 04:43+0000\n"
+"X-Generator: Launchpad (build 16491)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -418,7 +418,7 @@ msgstr "火焰星云"
 
 #: nebulae/default/ngc2000names.dat:235
 msgid "Satellite cluster"
-msgstr "卫星星云"
+msgstr "卫星星团"
 
 #: nebulae/default/ngc2000names.dat:236
 msgid "Thor's Helmet"
