--- a/po/stellarium/pt_BR.po
+++ b/po/stellarium/pt_BR.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-09 19:56+0700\n"
-"PO-Revision-Date: 2013-02-02 01:15+0000\n"
+"PO-Revision-Date: 2013-02-11 19:19+0000\n"
 "Last-Translator: Adriano Steffler <Unknown>\n"
 "Language-Team: Portuguese (Brazil) <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-02-10 04:46+0000\n"
-"X-Generator: Launchpad (build 16482)\n"
+"X-Launchpad-Export-Date: 2013-02-12 04:42+0000\n"
+"X-Generator: Launchpad (build 16491)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1198
 msgid "Meridian"
@@ -3013,7 +3013,7 @@ msgstr "Mover o telescópio para um dado conjunto de coordenadas"
 
 #: src/translations.h:654
 msgid "Show renderer statistics"
-msgstr ""
+msgstr "Mostrar estatísticas do renderizador"
 
 #. TRANSLATORS: Keyboard action group name
 #: src/translations.h:657 src/ui_configurationDialog.h:1121
