--- a/po/stellarium/zh_CN.po
+++ b/po/stellarium/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-09 19:56+0700\n"
-"PO-Revision-Date: 2013-01-27 09:33+0000\n"
-"Last-Translator: Allen Zhong <Unknown>\n"
+"PO-Revision-Date: 2013-02-11 19:29+0000\n"
+"Last-Translator: 罗佳伟 <luojiaweil@gmail.com>\n"
 "Language-Team: Chinese (Hong Kong) <zh_HK@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-02-10 04:47+0000\n"
-"X-Generator: Launchpad (build 16482)\n"
+"X-Launchpad-Export-Date: 2013-02-12 04:42+0000\n"
+"X-Generator: Launchpad (build 16491)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1198
 msgid "Meridian"
@@ -3250,7 +3250,7 @@ msgstr "相对大小:"
 
 #: src/ui_viewDialog.h:1153
 msgid "Milky Way brightness:"
-msgstr ""
+msgstr "银河亮度:"
 
 #: src/ui_viewDialog.h:1154
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:260
@@ -6662,7 +6662,7 @@ msgstr "时"
 #: plugins/Observability/src/Observability.cpp:500
 #: plugins/Observability/src/Observability.cpp:542
 msgid "m"
-msgstr "米"
+msgstr "分"
 
 #: plugins/Observability/src/Observability.cpp:499
 #: plugins/Observability/src/Observability.cpp:500
