--- a/po/stellarium-skycultures/cs.po
+++ b/po/stellarium-skycultures/cs.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2013-02-09 21:29+0000\n"
+"PO-Revision-Date: 2013-02-12 19:10+0000\n"
 "Last-Translator: Zbyněk Schwarz <Unknown>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-02-10 04:47+0000\n"
-"X-Generator: Launchpad (build 16482)\n"
+"X-Launchpad-Export-Date: 2013-02-13 04:35+0000\n"
+"X-Generator: Launchpad (build 16491)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -430,7 +430,7 @@ msgstr "Carolinina hvězdokupa"
 
 #: nebulae/default/ngc2000names.dat:238
 msgid "τ Canis Majoris cluster"
-msgstr ""
+msgstr "Hvězdokupa τ Velkého psa"
 
 #: nebulae/default/ngc2000names.dat:239
 msgid "Pencil nebula"
@@ -568,7 +568,7 @@ msgstr "Fazolová galaxie"
 #: nebulae/default/ngc2000names.dat:276 nebulae/default/ngc2000names.dat:277
 #: nebulae/default/ngc2000names.dat:278
 msgid "Leo Triplet"
-msgstr ""
+msgstr "Trojice v souhvězdí Lva"
 
 #: nebulae/default/ngc2000names.dat:279
 msgid "McLeish's Object"
@@ -604,11 +604,11 @@ msgstr "Hvězdokupa hvězdice"
 
 #: nebulae/default/ngc2000names.dat:287
 msgid "Superwind-Galaxy"
-msgstr ""
+msgstr "Supervětrná galaxie"
 
 #: nebulae/default/ngc2000names.dat:288
 msgid "Turtle planetary nebula"
-msgstr ""
+msgstr "Želví planetární mlhovina"
 
 #: skycultures/arabic/constellation_names.eng.fab:1
 msgid "The Shackled Woman"
