--- a/po/stellarium/en_GB.po
+++ b/po/stellarium/en_GB.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-09 19:56+0700\n"
-"PO-Revision-Date: 2013-02-07 13:49+0000\n"
-"Last-Translator: Andi Chandler <Unknown>\n"
+"PO-Revision-Date: 2013-02-14 01:13+0000\n"
+"Last-Translator: Mikael Hiort af Ornäs <lakritslemmel@hotmail.com>\n"
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-02-10 04:46+0000\n"
-"X-Generator: Launchpad (build 16482)\n"
+"X-Launchpad-Export-Date: 2013-02-14 04:35+0000\n"
+"X-Generator: Launchpad (build 16491)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1198
 msgid "Meridian"
@@ -2990,7 +2990,7 @@ msgstr "Move telescope to a given set of coordinates"
 
 #: src/translations.h:654
 msgid "Show renderer statistics"
-msgstr ""
+msgstr "Show renderer statistics"
 
 #. TRANSLATORS: Keyboard action group name
 #: src/translations.h:657 src/ui_configurationDialog.h:1121
