add eta Carinae image

--- a/README
+++ b/README
@@ -283,6 +283,8 @@ for more details on the location of the user data directory for your OS.
 		from Oleg Bryzgalov 
 		http://olegbr.astroclub.kiev.ua/
 		License: Creative Commons Attribution 3.0 Unported
+        4.17 Image of eta Carinae from Georg Zotti
+		License: Creative Commons Attribution 3.0 Unported
 
 --------------------------------------------------------------------------------
 9. LICENSE
